--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,12 +9,12 @@ on:
 jobs:
 
   build:
-    runs-on: golang:1.17.1
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
 
     - name: Set up Go
-      uses: actions/setup-go@master
+      uses: actions/setup-go@v2
       with:
         go-version: 1.17
 
